# I have added a CITATION file and modified the vignette to show the reference
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/PICS@47923 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -19,5 +19,6 @@ BUG FIXES
     o Fixed a bug when calculating the scores. The scores are now normalized for the 
     number of reads in the control. This could have affected the FDR calculation.
 
+    o Added better documentation for the plotting methods. Typing ?plot or ?FDR should get you better documentation.
 
 (start date: 1 May, 2010)
