trying to address 'R CMD build' failure on Windows by stopping explicitly subprocesses started by vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/PICS@50274 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/PICS.Rnw
+++ b/inst/doc/PICS.Rnw
@@ -159,5 +159,9 @@ rdBed<-makeRangedDataOutput(pics,type="wig",filter=c(myFilter,list(score=c(1,Inf
 export(rdBed,"myfile.wig")
 @
 
+<<echo=FALSE>>=
+sfStop()
+@
+
 \end{document}
 
