--- a/inst/doc/PICS.Rnw
+++ b/inst/doc/PICS.Rnw
@@ -14,7 +14,7 @@
 \newcommand{\scst}{\scriptstyle}
 
 \author{Xuekui Zhang\footnote{ubcxzhang@gmail.com} and Raphael
-  Gottardo\footnote{raphael.gottardo@ircm.qc.ca} and Arnaud Droit\footnote{arnaud.droit@ircm.qc.ca}}
+  Gottardo\footnote{rgottard@fhcrc.org} and Arnaud Droit\footnote{arnaud.droit@crchuq.ulaval.ca}}
 
 \begin{document}
 \title{PICS: Probabilistic Inference for ChIP-Seq}
