--- a/inst/doc/PICS.Rnw
+++ b/inst/doc/PICS.Rnw
@@ -63,8 +63,8 @@ model parameters, and these can be used to define confidence regions on binding 
 \section{PICS pipeline}
 A typical PICS analysis consists of the following steps:
 \begin{enumerate}
-  \item Convert data to a `GenomeData' list for efficient processing
-  \item Genome segmentation via `segmentReads'
+  \item Convert data to a `GRanges' for efficient processing
+  \item Genome segmentation via `segmentPICS'
   \item Estimation of binding site positions and other PICS parameters via `PICS'
   \item Repeat 1-2 by swapping the IP and Control samples
   \item Use 1-3 to estimate the FDR via `picsFDR'
@@ -90,19 +90,15 @@ In this documentation, the path for the data is:  .../PICS/inst/doc folder.
 path<-system.file("extdata",package="PICS")
 #Read the experiment : 
 dataIP<-read.table(file.path(path,"Treatment_tags_chr21_sort.bed"),header=TRUE,colClasses=c("factor","integer","integer","factor"))
-dataIP<-as(dataIP,"RangedData")
-dataIP<-as(dataIP,"GenomeData")
+dataIP<-as(dataIP,"GRanges")
 
 dataCont<-read.table(file.path(path,"Input_tags_chr21_sort.bed"),header=TRUE,colClasses=c("factor","integer","integer","factor"))
-dataCont<-as(dataCont,"RangedData")
-dataCont<-as(dataCont,"GenomeData")
+dataCont<-as(dataCont,"GRanges")
 @
 
 <<Reading the mappability profile>>=
 map<-read.table(file.path(path,"mapProfileShort"),header=TRUE,colClasses=c("factor","integer","integer","NULL"))
-map<-as(map,"RangedData")
-## Remove the chrM
-map<-map[-23]
+map<-as(map,"GRanges")
 @
 
 
@@ -120,7 +116,7 @@ sfLibrary(PICS)
 @
 
 <<Genome segmentation>>=
-seg<-segmentReads(dataIP, dataC=dataCont, map=map, minReads=1)
+seg<-segmentPICS(dataIP, dataC=dataCont, map=map, minReads=1)
 @
 
 
@@ -135,7 +131,7 @@ pics<-PICS(seg,dataType="TF")
 In order to estimate the FDR, we need to rerun our analysis after swapping the IP and control samples. Note that this requires the presence of a control sample. We proceed with the following commands to compute the FDR after removing binding site estimates with noisy parameters as specify by the filter. 
 
 <<FDR estimation>>=
-segC<-segmentReads(dataCont,dataC=dataIP,map=map,minReads=1)
+segC<-segmentPICS(dataCont,dataC=dataIP,map=map,minReads=1)
 picsC<-PICS(segC,dataType="TF")
 fdr<-picsFDR(pics,picsC,filter=list(delta=c(50,Inf),se=c(0,50),sigmaSqF=c(0,22500),sigmaSqR=c(0,22500)))
 @
