--- a/inst/doc/PICS.Rnw
+++ b/inst/doc/PICS.Rnw
@@ -1,5 +1,5 @@
 %\VignetteIndexEntry{The PICS users guide}
-%\VignetteDepends{PICS,snowfall}
+%\VignetteDepends{PICS,parallel}
 %\VignetteKeywords{Preprocessing, ChIP-Seq, Sequencing}
 %\VignettePackage{PICS}
 \documentclass[a4paper]{article}
@@ -34,7 +34,7 @@ A step-by-step guide in the analysis of ChIP-Seq data using the PICS package in 
 
 Under the Artistic license 2.0, you are free to use and redistribute this software. However, if you use this package for your own publication, we would ask you to cite the following paper:
 
-<<Loading PICS,eval=TRUE,echo=TRUE>>=
+<<Loading PICS,eval=TRUE,echo=FALSE>>=
 library(PICS)
 citation(package="PICS")
 @
@@ -88,7 +88,6 @@ Once the data have been read, we can create the `GenomeData' object, which is a 
 In this documentation, the path for the data is:  .../PICS/inst/doc folder.
 <<Reading the data>>=
 path<-system.file("extdata",package="PICS")
-#Read the experiment : 
 dataIP<-read.table(file.path(path,"Treatment_tags_chr21_sort.bed"),header=TRUE,
 colClasses=c("factor","integer","integer","factor"))
 dataIP<-as(dataIP,"GRanges")
@@ -110,12 +109,10 @@ map<-as(map,"GRanges")
 \subsection{Genome segmentation}
 We segment the genome into candidate regions by pre-processing bidirectional aligned reads data from a single ChIP-Seq experiment to detect candidate regions with a minimum number of forward and reverse reads. These candidate regions will then be processed by PICS. The `minReads' parameter will heavily influence the number of candidate regions returned. In principle, it is better to use a small value for `minReads' in order not to miss any true binding sites. However, a value too small will likely return many false positive regions, which can result a longer computing time for the \texttt{PICS} function.  If a control sample is available you may also chose a value of `minReads' that would give you a ratio of the number of candidate regions in the control over the number of candidate regions in the IP of about 25\%. A ratio larger than 25\% would most likely result in a large FDR when using \texttt{picsFDR}, and therefore it is not necessary to use too low of a threshold. See below for an illustration.  \newline
 
-In order to improve the computational efficiency of the PICS package, we recommend the utilisation of the \texttt{snowfall} package, which allows for easy parallel computations. In what follows, we assume that \texttt{snowfall} is installed on your machine. If not, you could omit the first three lines, which will lead a serial execution. By default the command is not run, so you're safe. Note that the \texttt{segmentReads} and \texttt{PICS} functions, will automatically detect whether you have initialized a cluster and if yes it will use it. 
+In order to improve the computational efficiency of the PICS package, we recommend the utilisation of the \texttt{parallel} package, which allows for easy parallel computations. In what follows, we assume that \texttt{parallel} is installed on your machine. If not, you could omit the first line, which will lead a serial execution. By default the command is not run, so you're safe. Note that the \texttt{segmentReads} and \texttt{PICS} functions, will automatically detect whether you have initialized a cluster and if yes it will use it. 
 
 <<Cluster initialization>>=
-library(snowfall)
-sfInit(parallel=TRUE,cpus=2)
-sfLibrary(PICS)
+library(parallel)
 @
 
 <<Genome segmentation>>=
@@ -127,7 +124,7 @@ seg<-segmentPICS(dataIP, dataC=dataCont, map=map, minReads=1)
 After having segmented the genome into candidate regions, we use the \texttt{PICS} function to detect binding regions in a probabilistic way, and returns binding site estimates, confidence intervals, etc. In the code below, we assume that you are processing transcription factor data, as specified with the `dataType' option set to `TF' for transcription factor. We also plan to support histone modification data in a future release of PICS, which will be turned on by specifying `dataType=`H'. In our case, assuming that we have already segmented the genome using \texttt{segmentReads}, we can proceed with the following command, 
 
 <<PICS analysis>>=
-pics<-PICS(seg,dataType="TF")
+pics<-PICS(seg)
 @
 
 \subsection{FDR estimation}
@@ -135,7 +132,7 @@ In order to estimate the FDR, we need to rerun our analysis after swapping the I
 
 <<FDR estimation>>=
 segC<-segmentPICS(dataCont,dataC=dataIP,map=map,minReads=1)
-picsC<-PICS(segC,dataType="TF")
+picsC<-PICS(segC)
 fdr<-picsFDR(pics,picsC,filter=list(delta=c(50,Inf),se=c(0,50),
 sigmaSqF=c(0,22500),sigmaSqR=c(0,22500)))
 @
@@ -177,9 +174,6 @@ rdBed<-makeRangedDataOutput(pics,type="wig",filter=c(myFilter,list(score=c(1,Inf
 export(rdBed,"myfile.wig")
 @
 
-<<echo=FALSE>>=
-sfStop()
-@
 
 \end{document}
 
