--- a/inst/doc/PICS.tex
+++ b/inst/doc/PICS.tex
@@ -3,22 +3,23 @@
 %\VignetteKeywords{Preprocessing, ChIP-Seq, Sequencing}
 %\VignettePackage{PICS}
 \documentclass[a4paper]{article}
+\usepackage{underscore}
 \usepackage{hyperref}
-\usepackage{url}
-\usepackage{color, pdfcolmk}
-\usepackage[authoryear,round]{natbib}
-\bibliographystyle{plainnat}
+%\usepackage{url}
+%\usepackage{color, pdfcolmk}
+%\usepackage[authoryear,round]{natbib}
+%\bibliographystyle{plainnat}
 
 
-\newcommand{\scscst}{\scriptscriptstyle}
-\newcommand{\scst}{\scriptstyle}
+%\newcommand{\scscst}{\scriptscriptstyle}
+%\newcommand{\scst}{\scriptstyle}
 
+\title{PICS: Probabilistic Inference for ChIP-Seq}
 \author{Xuekui Zhang\footnote{ubcxzhang@gmail.com} and Raphael
   Gottardo\footnote{rgottard@fhcrc.org} and Arnaud Droit\footnote{arnaud.droit@crchuq.ulaval.ca}}
 
 \usepackage{Sweave}
 \begin{document}
-\title{PICS: Probabilistic Inference for ChIP-Seq}
 \maketitle
 
 
@@ -82,12 +83,18 @@ As with any package, you first need to load it with the following command
 \section{Data Input and Formating}
 The first step of the PICS pipeline consists of converting the aligned reads (from both IP and control samples) into a format that allows efficient segmentation of the genome into a set of candidate regions that have enough Forward and Reverse reads. The data formatting could be a bed type dataframes as well as `AlignedReads' objects as returned by the function `readAligned' which can read various file formats including Eland, MAQ, Bowtie, etc. Please refer to the `ShortRead' vignette for more details on how to read data into R, other than from a BED file. In the example listed below, we use bed type files, which consists of tab delimited files with the following columns: space, start, end, strand, where each line represent a single read. 
 
-In addition to the IP Control datasets, we use another argument consisting of a mappability profile for the genome interrogated. For each chromosome, a mappability profile for a specific read length consists of a vector of zeros and ones that gives an estimated read mappability `score' for each base pair in the chromosome. A score of one at a position means that we should be able to align a read of that length uniquely at that position, while a score of zero indicates that no read of that length should be uniquely alienable at that position. As noted, reads that cannot be mapped to unique genomic locations are typically discarded. For convenience, and because transitions between mappable and non-mappable regions are typically much shorter than these regions, we compactly summarize each chromosome's mappability profile as a disjoint union of non-mappable intervals that specify only zero-valued profile. We store this information as a bed file where each line correspond a non-mappable intervals. PICS makes use of such mappability profiles to estimate the reads that are missing because they could not be aligned. 
+In addition to the IP Control datasets, we use another argument consisting of a mappability profile for the genome interrogated. For each chromosome, a mappability profile for a specific read length consists of a vector of zeros and ones that gives an estimated read mappability `score' for each base pair in the chromosome. A score of one at a position means that we should be able to align a read of that length uniquely at that position, while a score of zero indicates that no read of that length should be uniquely alienable at that position. As noted, reads that cannot be mapped to unique genomic locations are typically discarded. For convenience, and because transitions between mappable and non-mappable regions are typically much shorter than these regions, we compactly summarize each chromosome's mappability profile as a disjoint union of non-mappable intervals that specify only zero-valued profile. We store this information as a bed file where each line correspond a non-mappable intervals. PICS makes use of such mappability profiles to estimate the reads that are missing because they could not be aligned. Mappability profiles for a range of reads lengths and species are available from:
+
+http:/wiki.rglab.org/index.php?title=Public:Mappability_Profile
+
+To make your own mappability profiles, use the script available at:
+
+https://github.com/SRenan/proMap/
 
 Once the data have been read, we can create the `GenomeData' object, which is a list data structure, where each element of the list corresponds to a different chromosome. Each element of the list contains the IP and control reads as well as the mappability profiles for the corresponding chromosome. When reading the data, we can also sort and remove duplicated reads, which is recommended for a PICS analysis (sort is actually required).
 
 
-In this documentation, the path for the data is:  .../PICS/inst/doc folder.
+In this documentation, the path for the data is:  .../PICS/inst/extdata folder.
 \begin{Schunk}
 \begin{Sinput}
 > path<-system.file("extdata",package="PICS")
@@ -126,12 +133,6 @@ In order to improve the computational efficiency of the PICS package, we recomme
 \begin{Sinput}
 > seg<-segmentPICS(dataIP, dataC=dataCont, map=map, minReads=1)
 \end{Sinput}
-\begin{Soutput}
-maxstep=0
-step=20
-width=250
-minReads=1
-\end{Soutput}
 \end{Schunk}
 
 
@@ -150,14 +151,6 @@ In order to estimate the FDR, we need to rerun our analysis after swapping the I
 \begin{Schunk}
 \begin{Sinput}
 > segC<-segmentPICS(dataCont,dataC=dataIP,map=map,minReads=1)
-\end{Sinput}
-\begin{Soutput}
-maxstep=0
-step=20
-width=250
-minReads=1
-\end{Soutput}
-\begin{Sinput}
 > picsC<-PICS(segC)
 > fdr<-picsFDR(pics,picsC,filter=list(delta=c(50,Inf),se=c(0,50),
 + sigmaSqF=c(0,22500),sigmaSqR=c(0,22500)))
